syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/popeskul/mailflow/user-service/pkg/api/user/v1;userv1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }

  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {get: "/api/v1/users/{id}"};
  }

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {get: "/api/v1/users"};
  }
}

message User {
  string id = 1;
  string email = 2 [(google.api.field_behavior) = REQUIRED];
  string username = 3 [(google.api.field_behavior) = REQUIRED];
  string created_at = 4;
}

message CreateUserRequest {
  string email = 1 [(google.api.field_behavior) = REQUIRED];
  string username = 2 [(google.api.field_behavior) = REQUIRED];
}

message CreateUserResponse {
  string id = 1;
  User user = 2;
}

message GetUserRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
}
